[project]
name = "wheel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "playwright>=1.57.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "selectolax>=0.4.6",
]
